--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <groupId>com.engagepoint.test</groupId>
     <artifactId>HelloMaven</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -13,8 +13,8 @@
     <scm>
         <connection>scm:git:https://github.com/khelemes/hello_maven.git</connection>
         <developerConnection>scm:git:https://github.com/khelemes/hello_maven.git</developerConnection>
-        <url>http://192.168.32.45/engagepoint/authenticate/tree/master/</url>
-        <tag>HEAD</tag>
+        <url>https://github.com/khelemes/hello_maven/tree/master/</url>
+        <tag>helloMavenRelease-10</tag>
     </scm>
 
     <dependencies>
@@ -112,6 +112,20 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <tagBase>svn://svn.zoo.com/zoo/tags</tagBase>
+                    <branchBase>svn://svn.zoo.com/zoo/branches</branchBase>
+                    <preparationGoals>clean install</preparationGoals>
+                    <goals>deploy</goals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+            </plugin>
+
+
 
         </plugins>
     </build>
