--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <groupId>com.engagepoint.test</groupId>
     <artifactId>HelloMaven</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
@@ -14,7 +14,7 @@
         <connection>scm:git:https://github.com/khelemes/hello_maven.git</connection>
         <developerConnection>scm:git:https://github.com/khelemes/hello_maven.git</developerConnection>
         <url>https://github.com/khelemes/hello_maven/tree/master/</url>
-        <tag>helloMavenRelease-10</tag>
+        <tag>HelloMaven-1.0</tag>
     </scm>
 
     <dependencies>
@@ -113,7 +113,7 @@
                 </executions>
             </plugin>
 
-            <plugin>
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
@@ -123,7 +123,7 @@
                     <goals>deploy</goals>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
-            </plugin>
+            </plugin>-->
 
 
 
