--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <groupId>com.engagepoint.test</groupId>
     <artifactId>HelloMaven</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
@@ -13,16 +13,23 @@
     <scm>
         <connection>scm:git:https://github.com/khelemes/hello_maven.git</connection>
         <developerConnection>scm:git:https://github.com/khelemes/hello_maven.git</developerConnection>
-        <url>https://github.com/khelemes/hello_maven/tree/master/</url>
-        <tag>HelloMaven-1.0</tag>
     </scm>
 
+
+
     <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+    </dependencies>
+<!--    <dependencies>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.1</version>
-<!--            <scope>compile</scope>-->
+&lt;!&ndash;            <scope>compile</scope>&ndash;&gt;
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -36,13 +43,13 @@
             <artifactId>hibernate-core</artifactId>
             <version>4.1.6.Final</version>
         </dependency>
-<!--
+&lt;!&ndash;
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>3.3.0.BUILD-SNAPSHOT</version>
-        </dependency>-->
-    </dependencies>
+        </dependency>&ndash;&gt;
+    </dependencies>-->
 
 <!--    <repositories>
         <repository>
@@ -79,7 +86,14 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.4</version>
                 <configuration>
-                    <useDefaultManifestFile>true</useDefaultManifestFile>
+<!--                    <useDefaultManifestFile>true</useDefaultManifestFile>-->
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>HelloMaven</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
 
